[package]
name = "deskulpt_rolldown"
version = "0.1.0"
description = "[FORK] Rolldown's rolldown crate."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rolldown"
doctest = false

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "oxc_index/serde"]

[dependencies]
anyhow = { workspace = true }
append-only-vec = { workspace = true }
arcstr = { workspace = true }
bitflags = { workspace = true }
commondir = { workspace = true }
css-module-lexer = { workspace = true }
derive_more = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
itoa = { workspace = true }
memchr = { workspace = true }
notify = { workspace = true }
oxc = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ecmascript = { workspace = true }
oxc_index = { workspace = true }
oxc_traverse = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_debug = { workspace = true }
deskulpt_rolldown_ecmascript = { workspace = true }
deskulpt_rolldown_ecmascript_utils = { workspace = true }
deskulpt_rolldown_error = { workspace = true }
deskulpt_rolldown_fs = { workspace = true, features = ["os"] }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_plugin_chunk_import_map = { workspace = true }
deskulpt_rolldown_plugin_data_uri = { workspace = true }
deskulpt_rolldown_plugin_hmr = { workspace = true }
deskulpt_rolldown_plugin_oxc_runtime = { workspace = true }
deskulpt_rolldown_resolver = { workspace = true }
deskulpt_rolldown_sourcemap = { workspace = true }
deskulpt_rolldown_std_utils = { workspace = true }
deskulpt_rolldown_tracing = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
deskulpt_rolldown_watcher = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
string_wizard = { workspace = true }
sugar_path = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }

[dev-dependencies]
glob = { workspace = true }
insta = { workspace = true }
rolldown_testing = { workspace = true }
rolldown_workspace = { workspace = true }
sugar_path = { workspace = true }
testing_macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "rt-multi-thread"] }

[package.metadata.cargo-shear]
# `serde_json` is used in `trace_action` macro.
ignored = ["serde", "serde_json"]
