[package]
name = "deskulpt_rolldown_debug"
version = "0.1.0"
description = "[FORK] Rolldown's rolldown_debug crate."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "rolldown_debug"
doctest = false

[dependencies]
blake3 = { workspace = true }
dashmap = { workspace = true }
deskulpt_rolldown_debug_action = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["std", "fmt", "json"] }
