[package]
name = "deskulpt_rolldown_debug_action"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_debug_action crate."

[lints]
workspace = true

[lib]
name = "rolldown_debug_action"
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
ts-rs = { workspace = true }
