[package]
name = "deskulpt_rolldown_ecmascript"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_ecmascript crate."

[lib]
name = "rolldown_ecmascript"
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
deskulpt_rolldown_error = { workspace = true }
oxc = { workspace = true }
oxc_sourcemap = { workspace = true }
self_cell = { workspace = true }
