[package]
name = "deskulpt_rolldown_ecmascript_utils"
version = "0.1.0"
description = "[FORK] Rolldown's rolldown_ecmascript_utils crate."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "rolldown_ecmascript_utils"
doctest = false

[dependencies]
oxc = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
smallvec = { workspace = true }
