[package]
name = "deskulpt_rolldown_ecmascript_utils"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_ecmascript_utils crate."

[lints]
workspace = true

[lib]
name = "rolldown_ecmascript_utils"
doctest = false

[dependencies]
deskulpt_rolldown_common = { workspace = true }
oxc = { workspace = true }
smallvec = { workspace = true }
