[package]
name = "deskulpt_rolldown_fs"
version = "0.1.0"
description = "[FORK] Rolldown's rolldown_fs crate."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rolldown_fs"
doctest = false

[lints]
workspace = true

[features]
memory = []
os = []

[dependencies]
oxc_resolver = { workspace = true }
vfs = { workspace = true }
