[package]
name = "deskulpt_rolldown_fs"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_fs crate."

[lib]
name = "rolldown_fs"
doctest = false

[lints]
workspace = true

[features]
memory = []
os = []

[dependencies]
oxc_resolver = { workspace = true }
vfs = { workspace = true }
