[package]
name = "rolldown_plugin_asset"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
cow-utils = { workspace = true }
derive_more = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
rolldown_plugin_utils = { workspace = true }
serde_json = { workspace = true }
