[package]
name = "rolldown_plugin_asset_import_meta_url"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
deskulpt_rolldown_plugin = { workspace = true }
