[package]
name = "rolldown_plugin_build_import_analysis"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_ecmascript_utils = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
oxc = { workspace = true }
