[package]
name = "deskulpt_rolldown_plugin_data_uri"
version = "0.1.0"
description = "[FORK] Rolldown's rolldown_plugin_data_uri crate."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rolldown_plugin_data_uri"
doctest = false

[dependencies]
arcstr = { workspace = true }
base64-simd = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
urlencoding = { workspace = true }
