[package]
name = "rolldown_plugin_dynamic_import_vars"
version = "0.0.1"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
cow-utils = { workspace = true }
derive_more = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
sugar_path = { workspace = true }
