[package]
name = "rolldown_plugin_esm_external_require"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
