[package]
name = "deskulpt_rolldown_plugin_hmr"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_plugin_hmr crate."

[dependencies]
arcstr = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
oxc = { workspace = true }

[lints]
workspace = true

[lib]
name = "rolldown_plugin_hmr"
