[package]
name = "rolldown_plugin_import_glob"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
deskulpt_rolldown_ecmascript_utils = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
fast-glob = { workspace = true }
itoa = { workspace = true }
oxc = { workspace = true }
rolldown_plugin_utils = { workspace = true }
sugar_path = { workspace = true }
walkdir = { workspace = true }
