[package]
name = "rolldown_plugin_isolated_declaration"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_error = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
oxc = { workspace = true }
sugar_path = { workspace = true }

[dev-dependencies]
deskulpt_rolldown_testing = { workspace = true }
testing_macros = { workspace = true }
