[package]
name = "rolldown_plugin_manifest"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
cow-utils = { workspace = true }
derive_more = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
