[package]
name = "rolldown_plugin_replace"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
deskulpt_rolldown_plugin = { path = "../rolldown_plugin" }
deskulpt_rolldown_string_wizard = { workspace = true }
oxc = { workspace = true }
regex = { workspace = true }
regress = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
deskulpt_rolldown = { workspace = true }
deskulpt_rolldown_testing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "rt-multi-thread"] }
