[package]
name = "rolldown_plugin_transform"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_error = { workspace = true }
deskulpt_rolldown_plugin = { workspace = true }
deskulpt_rolldown_utils = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
rolldown_plugin_utils = { workspace = true }
