[package]
name = "deskulpt_rolldown_sourcemap"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_sourcemap crate."

[lints]
workspace = true

[lib]
name = "rolldown_sourcemap"
bench = false
doctest = false

[dependencies]
deskulpt_rolldown_utils = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
oxc_sourcemap = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion2 = { workspace = true, default-features = false }

[[bench]]
harness = false
name = "join"
