[package]
name = "deskulpt_rolldown_std_utils"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_std_utils crate."

[lib]
name = "rolldown_std_utils"
doctest = false

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
