[package]
name = "deskulpt_rolldown_testing"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_testing crate."

[lib]
name = "rolldown_testing"
doctest = false
test = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
deskulpt_rolldown = { workspace = true }
deskulpt_rolldown_common = { workspace = true }
deskulpt_rolldown_error = { workspace = true }
deskulpt_rolldown_sourcemap = { workspace = true }
deskulpt_rolldown_testing_config = { workspace = true }
deskulpt_rolldown_workspace = { workspace = true }
dunce = { workspace = true }
glob = { workspace = true }
insta = { workspace = true }
json-strip-comments = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "rt-multi-thread"] }
urlencoding = { workspace = true }

[build-dependencies]
deskulpt_rolldown_testing_config = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[[bin]]
doctest = false
name = "run-fixture"
path = "./bin/run_fixture.rs"
test = false
