[package]
name = "deskulpt_rolldown_testing_config"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "[FORK] Rolldown's rolldown_testing_config crate."

[lib]
name = "rolldown_testing_config"
doctest = false
test = false

[dependencies]
deskulpt_rolldown_common = { workspace = true, features = ["deserialize_bundler_options"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
